Updating the files

--- a/iot-applications.html
+++ b/iot-applications.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="style.css" />
-    <meta charset="utf-8" />
-    <meta name="description" content="A web page about IoT Applications" />
-    <meta name="author" content="Vicky Kumar" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IoT Applications</title>
-  </head>
-  <body>
-    <h1>IoT Applications</h1>
-    <p> This is the first paragraph</p>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8" />
+  <meta name="description" content="A web page about IoT Applications" />
+  <meta name="author" content="Vicky Kumar" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IoT Applications</title>
+</head>
+
+<body>
+  <h1>
+    IoT Applications
+  </h1>
+  <p>
+    It displays the data collected from the sensors and organize that data and execute a process. The features needed
+    are connectivity, analyzing, integration, dynamic nature, security, user interface. Some examples of an IoT
+    applications are home security, motion detection, traffic management and weather monitoring
+  </p>
+  <h2>
+    List of IoT-Application
+  </h2>
+  <pre>
+    Smart Homes
+    Self-Driven Cars
+    smart Healthcare
+    Modern Farming
+    Smart Pollution Control
+  </pre>
+
+  <h1>
+    Smart Building
+  </h1>
+  <p>
+    The Smart Building can be that building where we can use our resources effciently, control the things with ease and
+    automation of tasks. It must contains the some of these scenarios which are water monitoring, motion controlled
+    lights, fire detection. And the features needed are security, analyzing, eco-friendly, power optimization.
+  </p>
+
+  <h1>
+    Control Interface
+  </h1>
+  <p>
+    The users of the interface can be staff, residentionals, visiters, officials. And there can be huge number of
+    features and some of them can be smart parking system, controlling the light system in the house, perform some
+    actions from interface
+  </p>
+
+</body>
+
 </html>
