--- a/iot-applications.html
+++ b/iot-applications.html
@@ -14,39 +14,104 @@
   <h1>
     IoT Applications
   </h1>
+  <h2>
+    Introduction
+  </h2>
   <p>
-    It displays the data collected from the sensors and organize that data and execute a process. The features needed
-    are connectivity, analyzing, integration, dynamic nature, security, user interface. Some examples of an IoT
-    applications are home security, motion detection, traffic management and weather monitoring
+    It displays the data collected from the sensors and organize that data and execute a process.
   </p>
+  <h2>
+    Features
+  </h2>
+  <p>
+    The features neede are connectivity, analyzing, integration, dynamic nature, security, user interface. Some examples
+    of an IoT applications are home security, motion detection, traffic management and weather monitoring
+  </p>
+  <h2>
+    Examples
+  </h2>
+  <p>
+    Some examples of an IoT applications are home security, motion detection, traffic management and weather monitoring
+  </p>
+
   <h2>
     List of IoT-Application
   </h2>
   <pre>
-    Smart Homes
-    Self-Driven Cars
-    smart Healthcare
-    Modern Farming
-    Smart Pollution Control
+  ◉ Smart Homes
+  ◉ Self-Driven Cars
+  ◉ Smart Healthcare
+  ◉ Modern Farming
+  ◉ Smart Pollution Control
   </pre>
-
+  <hr>
   <h1>
     Smart Building
   </h1>
+  <h2>
+    Introduction
+  </h2>
   <p>
     The Smart Building can be that building where we can use our resources effciently, control the things with ease and
-    automation of tasks. It must contains the some of these scenarios which are water monitoring, motion controlled
-    lights, fire detection. And the features needed are security, analyzing, eco-friendly, power optimization.
+    automation of tasks.</p>
+  <h2>
+    Scenarios
+  </h2>
+  <p>
+    Some scenarios of Smart Building are :-
+  <pre>
+  ◉ Water monitoring
+  ◉ Motion controlled
+  ◉ Lights
+  ◉ Fire detection
+    </pre>
   </p>
-
+  <h2>
+    Features
+  </h2>
+  <p>
+    There are enumerous number of features but some them are :-
+  <pre>
+  ◉ Security
+  ◉ Analyzing
+  ◉ Eco-friendly
+  ◉ Power optimization
+    </pre>
+  </p>
+  <hr>
   <h1>
     Control Interface
   </h1>
+  <h2>
+    Introduction
+  </h2>
   <p>
-    The users of the interface can be staff, residentionals, visiters, officials. And there can be huge number of
-    features and some of them can be smart parking system, controlling the light system in the house, perform some
-    actions from interface
+    The users of the interface can be staff, residentionals, visiters, officials.
   </p>
+  <h2>
+    Features
+  </h2>
+  <p>
+    There can be huge number of features which are :-
+  <pre>
+  ◉ Smart parking system
+  ◉ Controlling the light system in the house
+  ◉ Perform some actions from interface
+  </pre>
+  </p>
+  <h2>
+    Parts Needed
+  </h2>
+  <p>
+    There are number of parts but some of them are written here :-
+  <pre>
+  ◉ Weight sensor/Pressure Plates
+  ◉ Amlifier
+  ◉ Qr code scanner
+  </pre>
+  </p>
+  <hr>
+
 
 </body>
 
