Modified the files again

--- a/iot-applications.html
+++ b/iot-applications.html
@@ -37,80 +37,85 @@
   <h2>
     List of IoT-Application
   </h2>
-  <pre>
-  ◉ Smart Homes
-  ◉ Self-Driven Cars
-  ◉ Smart Healthcare
-  ◉ Modern Farming
-  ◉ Smart Pollution Control
-  </pre>
-  <hr>
-  <h1>
-    Smart Building
-  </h1>
-  <h2>
-    Introduction
-  </h2>
-  <p>
-    The Smart Building can be that building where we can use our resources effciently, control the things with ease and
-    automation of tasks.</p>
-  <h2>
-    Scenarios
-  </h2>
-  <p>
-    Some scenarios of Smart Building are :-
-  <pre>
-  ◉ Water monitoring
-  ◉ Motion controlled
-  ◉ Lights
-  ◉ Fire detection
-    </pre>
-  </p>
-  <h2>
-    Features
-  </h2>
-  <p>
-    There are enumerous number of features but some them are :-
-  <pre>
-  ◉ Security
-  ◉ Analyzing
-  ◉ Eco-friendly
-  ◉ Power optimization
-    </pre>
-  </p>
-  <hr>
-  <h1>
-    Control Interface
-  </h1>
-  <h2>
-    Introduction
-  </h2>
-  <p>
-    The users of the interface can be staff, residentionals, visiters, officials.
-  </p>
-  <h2>
-    Features
-  </h2>
-  <p>
-    There can be huge number of features which are :-
-  <pre>
-  ◉ Smart parking system
-  ◉ Controlling the light system in the house
-  ◉ Perform some actions from interface
-  </pre>
-  </p>
-  <h2>
-    Parts Needed
-  </h2>
-  <p>
-    There are number of parts but some of them are written here :-
-  <pre>
-  ◉ Weight sensor/Pressure Plates
-  ◉ Amlifier
-  ◉ Qr code scanner
-  </pre>
-  </p>
-  <hr>
+
+  <ul>
+    <li>Homes</li>
+    <li>Self-Driven Cars</li>
+    <li>Smart Healthcare</li>
+    <li>Modern Farming</li>
+    <li>Smart Pollution Control</li>
+  </ul>
+
+
+    <hr>
+    <h1>
+      Smart Building
+    </h1>
+    <h2>
+      Introduction
+    </h2>
+    <p>
+      The Smart Building can be that building where we can use our resources effciently, control the things with ease
+      and
+      automation of tasks.</p>
+    <h2>
+      Scenarios
+    </h2>
+    <p>
+      Some scenarios of Smart Building are :-
+      <ul>
+      <li>Water monitoring</li>
+      <li>Motion controlled</li>
+      <li>Lights</li>
+      <li>Fire detection</li>
+    </ul>
+    </p>
+    <h2>
+      Features
+    </h2>
+    <p>
+      There are enumerous number of features but some them are :-
+    <ul>
+      <li>Security</li>
+      <li>Analyzing</li>
+      <li>Eco-friendly</li>
+      <li>Power optimization</li>
+    </ul>
+
+    </p>
+    <hr>
+    <h1>
+      Control Interface
+    </h1>
+    <h2>
+      Introduction
+    </h2>
+    <p>
+      The users of the interface can be staff, residentionals, visiters, officials.
+    </p>
+    <h2>
+      Features
+    </h2>
+    <p>
+      There can be huge number of features which are :-
+    <ul>
+      <li>Smart parking system</li>
+      <li>Controlling the light system in the house</li>
+      <li>Perform some actions from interface</li>
+    </ul>
+    </p>
+    <h2>
+      Parts Needed
+    </h2>
+    <p>
+      There are number of parts but some of them are written here :-
+
+      <li>Weight sensor/Pressure Plates</li>
+      <li>Amlifier</li>
+      <li>Qr code scanner</li>
+      </pre>
+    </p>
+    <hr>
 
 
 </body>
